Implemented ice tower level variations